# tactial_left

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  build.sh  config.yml  run_with_gdb.sh
assets/menuitems/: Readme
include/olc/: olcPGEX_FrostUI.h  olcPGEX_UI.h  olcPixelGameEngine.h
src/: asset_manager.cpp  asset_manager.hpp  debug.hpp  game.cpp  game.hpp  logger.cpp  logger.hpp  logger_level.hpp  main.cpp  registry.cpp  registry.hpp
src/components/: animation.hpp  combat.hpp  components.hpp  debugging.hpp  gui.hpp  interaction.hpp  rendering.hpp
src/engine/: event.hpp  game_input_event.hpp  input.hpp  input_handler.cpp  input_handler.hpp  key_event.hpp  mouse_event.hpp  observer.hpp  sound.cpp  sound.hpp
src/layers/: debug_layer.cpp  debug_layer.hpp  game_layer.cpp  game_layer.hpp  layer.hpp  menu_layer.cpp  menu_layer.hpp
src/registry/: game_event.hpp  registry.hpp
src/states/: gamestate.hpp  initstate.cpp  initstate.hpp  loadstate.cpp  loadstate.hpp  starstate.cpp  starstate.hpp
src/states/combat/: combatstate.cpp  combatstate.hpp  combatstate_initialize.cpp  combatstate_initialize.hpp  combatstate_playeraction.cpp  combatstate_playeraction.hpp  combatstate_playermovement.cpp  combatstate_playermovement.hpp  combatstate_playermovement.hpp.old
src/states/init/: initstate.cpp  initstate.hpp
src/states/load/: loadstate.cpp  loadstate.hpp
src/states/star/: starstate.cpp  starstate.hpp
src/systems/: animation.cpp  animation.hpp  rendering.cpp  rendering.hpp  system.hpp
src/utils/: complex_datatypes.hpp  debugging.hpp  ecs.hpp  geometry.hpp  logger_helper.hpp
